--- a/src/main/resources/de/jinx/trainplaner/ExerciseWindow.fxml
+++ b/src/main/resources/de/jinx/trainplaner/ExerciseWindow.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="455.0" prefWidth="622.0" style="-fx-border-width: 2; -fx-border-color: black;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.jinx.trainplaner.components.ExerciseWindowCon">
+<AnchorPane prefHeight="455.0" prefWidth="622.0" style="-fx-border-width: 2; -fx-border-color: black;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.jinx.trainplaner.controllers.ExerciseWindowCon">
    <children>
       <Label fx:id="exerciseName" alignment="CENTER" layoutX="21.0" layoutY="14.0" prefHeight="25.0" prefWidth="164.0" text="Name" textAlignment="CENTER" AnchorPane.leftAnchor="14.0">
          <font>
